# pytest-book-project

./: README.md  pyproject.toml
src/cards/: cards_model.py
tests/: test_cards_model.py
