[tool.poetry]
name = "Cards"
version = "0.1.0"
description = "A simple CLI TODO App from the pytest book"
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]
license = "GplV3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
